--- a/brafe-puro/css/style.css
+++ b/brafe-puro/css/style.css
@@ -1,3 +1,4 @@
+
 /* Reset */
 body,h1,h2,h3,p,ul {
     padding: 0px;
@@ -54,6 +55,14 @@ body{
 
 }
 
+@media (max-width:739px){
+    .menu-nav{
+        float:none;
+        clear:both;
+    }
+    
+}
+
 /*Intro */
 
 .intro {
@@ -83,6 +92,24 @@ body{
     font-style:italic;
     font-size: 1.125em;
 
+}
+
+@media (max-width:739px){
+    .intro{
+        padding:60px 0;    
+    }
+    .menu{
+        text-align:center;
+    }
+    a.menu-logo{
+        float:none;
+        margin:0 auto;
+    }
+    .menu-nav{
+        float:none;
+        clear:both;
+    }
+    
 }
 
 /* Sobre */
@@ -150,6 +177,26 @@ body{
     max-width: 460px;
 }
 
+
+@media (min-width:739px) and (max-width:980px){
+    .sobre-container{
+        max-width: 720px;
+    }
+    .sobre-item{
+        width:340px;
+    }
+    
+}
+
+@media (max-width: 739px){
+    .sobre-container{
+        max-width:300px;
+    }
+    .sobre-item{
+        width:300px;
+        margin: 0 auto;
+    }
+}
 /* Produtos */
 
 .produtos {
@@ -229,6 +276,24 @@ h2.produtos-mineiro::before{
     margin: 20px auto 0 auto;
 }
 
+@media (min-width:739px) and (max-width:980px){
+    .produtos-container{
+        max-width: 720px;
+    }
+    .produtos-item{
+        width:220px;
+    }
+    
+}
+
+@media (max-width: 739px){
+    .produtos-container{
+        max-width:300px;
+    }
+    .produtos-item{
+        margin: 0 auto 20px auto;
+    }
+}
 
 /* Locais */
 
@@ -287,4 +352,173 @@ h2.produtos-mineiro::before{
     border: 3px solid;
     color: #252525;
     padding:10px 20px;
+}
+
+@media (min-width:739px) and (max-width:980px){
+    .locais{
+        max-width: 720px;
+    }
+    .locais-item > div, .locais-item img{
+        width:340px;
+    }
+    
+}
+
+@media (max-width: 739px){
+    .locais{
+        max-width:300px;
+        
+    }
+    .locais-item > div, .locais-item img{
+        width:300px;
+        margin:0px;
+    }
+}
+
+/* Assine */
+
+.assine{
+    background: #e7e4d8;
+    padding:30px 0;
+
+}
+
+.assine-container{
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.assine-container::after, .assine-container::before{
+    content: '';
+    display:table;
+    clear:both;
+}
+
+.assine-info{
+    width:460px;
+    margin: 0 10px;
+    float:left;
+}
+
+.assine-info h2{
+    font-size:2.25em;
+
+}
+
+.assine-info p{
+    font-size: 1.5em;
+    font-style: italic;
+}
+
+.assine form{
+    width: 460px;
+    margin: 10px 10px 0 10px;
+    float: left;
+}
+
+.assine form label{
+    display:none;
+}
+
+.assine input{
+    box-sizing: border-box;
+    width:320px;
+    border: 3px solid #252525;
+    background:none;
+    font-size:1.5em;
+    font-style:italic;
+    font-family:Georgia, serif;
+    padding: 10px;
+    float: left;
+
+}
+
+.assine button{
+    font-size:1.5em;
+    font-family: Georgia, serif;
+    text-transform: uppercase;
+    width:140px;
+    padding:13px 0;
+    color: white;
+    border: none;
+    background: black;
+    cursor:pointer;
+}
+
+@media (min-width:739px) and (max-width:980px){
+    .assine-container{
+        max-width:720px;
+    }
+    .assine-info, .assine form, .assine input{
+        width: 340px;
+    }
+  
+}
+
+@media (max-width: 739px){
+    .assine-container{
+        max-width:300px;
+    }
+    .assine-info, .assine form, .assine input{
+        width: 300px;
+        margin: 10px 0 0 0;
+    }
+}
+
+
+/* Footer */
+
+.footer{
+    background: #d6d3c8;
+    padding:40px 0;
+}
+
+.footer-container{
+    max-width:960px;
+    margin: 0 auto;
+}
+
+.footer-container::after, .footer-container::before{
+    content:'';
+    display:table;
+    clear:both;
+}
+
+.footer p{
+    float: left;
+    margin: 0 10px;
+    font-size: 1.125em;
+    line-height:1.4em;   
+}
+
+.footer img{
+    float: right;
+    margin: 0 10px;
+    display:block;
+}
+
+.git{
+    width:30px;
+    height:30px;
+    
+}
+
+
+@media (max-width: 739px){
+    .footer-container{
+        max-width:300px;
+        text-align:center;
+        
+        
+        
+    }
+    .footer-container img{
+        display:inline-block;
+        float:none;
+        margin:10px auto;  
+    }
+    .git{
+        width:300px;
+        align-items:center;
+    }
 }
